# CART-Algorithm

./: README.md
code/: CMakeLists.txt
code/entry/: main.cpp
code/src/: CART.cpp  CART.h  CMakeLists.txt  input.cpp
code/tests/: tests.cpp
data/: CDC_Diabetes_XTest.csv  CDC_Diabetes_yTest.csv  CDC_Diabetes_yTrain.csv  Disease_symptom_XTest.csv  Disease_symptom_XTrain.csv  Disease_symptom_yTest.csv  Disease_symptom_yTrain.csv  Stroke_Data_XTest.csv  Stroke_Data_XTrain.csv  Symptom_Checker.csv  Symptom_Checker_XTest.csv  Symptom_Checker_XTrain.csv  Symptom_Checker_yTest.csv  Symptom_Checker_yTrain.csv  test_dataset_X.csv  test_dataset_Y.csv
documents/: data_cleaning.py  development_log.md  proposal.md
mentor/: week1_feedback.md  week2_feedback.md  week3_feedback.md
results/: output.txt
